dnl Process this file with autoconf to produce a configure script.
dnl
dnl Since mp3chop is written in C++ a lot of this is redundant.
dnl It also seems that autoconf isn't geared up to look for C++
dnl specific headers so we just assume they are there.

dnl If you change the version here make sure you also change it
dnl in config_win32.h.
AC_INIT(main.cpp)
AM_INIT_AUTOMAKE(mp3chop, 1.03)
AM_CONFIG_HEADER(config.h)
AC_CANONICAL_HOST

dnl Handle debugging
echo $ac_n "checking if we are debugging... $ac_c" 1>&6	
AC_ARG_ENABLE(debug, [Enable debugging support], DEBUG=1, DEBUG=0)
export DEBUG
AC_SUBST(DEBUG)
if [[ "$DEBUG" = "0" ]]; then
 echo "no" 1>&6
else
 echo "yes" 1>&6
fi

dnl Checks for programs.
dnl AC_PROG_CC
AC_PROG_CXX
dnl AC_PROG_MAKE_SET
AC_PROG_INSTALL
dnl AC_PROG_CPP
AC_PROG_AWK
AC_PROG_LN_S

dnl Checks for libraries.
AC_CHECK_LIB(dl, dlopen, LIBDL="-ldl")
AC_SUBST(LIBDL)	

AC_CHECK_LIB(efence, EF_ALIGNMENT, LIBEFENCE="-lefence")
AC_SUBST(LIBEFENCE)

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
dnl AC_TYPE_PID_T
dnl AC_HEADER_TIME
AC_TYPE_SIZE_T
dnl AC_HEADER_STDBOOL

dnl Checks for library functions.
dnl AC_FUNC_ALLOCA
dnl AC_FUNC_MEMCMP
dnl AC_FUNC_VPRINTF

# Do we have GNU getopt?
AC_CHECK_FUNCS(getopt_long getopt)
AC_CHECK_FUNCS(strerror)
AC_CHECK_FUNCS(memmove)
AC_FUNC_MEMCMP(memcmp)

AC_CHECK_HEADERS(fcntl.h)
AC_CHECK_HEADERS(string.h)
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(fcntl.h)

AC_OUTPUT(Makefile)
